<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:padding="10dp"
    tools:context=".tragapp.activities.ReserveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageAdd"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/start_round"
            android:src="@drawable/ic_baseline_directions_boat_24" />

        <TextView
            android:id="@+id/text_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reserveadd"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="341dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/button_data"
                style="@style/GenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logbutton"
                android:textColor="@color/colorTextPrimary"
                android:gravity="center"
                android:text="@string/data"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="419dp" />

            <TextView
                android:id="@+id/text_data"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/scegli_data"
                android:textAlignment="center"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="@color/colorTextPrimary"
                    android:text="-"
                    android:textSize="20sp"
                    android:background="@drawable/logbutton"/>

                <TextView
                    android:id="@+id/NumberAdults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="@color/colorTextPrimary"
                    android:text="+"
                    android:textSize="20sp"
                    android:background="@drawable/logbutton"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textOrario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/orario"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_andata"
                    android:textColor="@color/colorTextPrimary"
                    android:background="@color/colorPrimaryDark"
                    android:popupBackground="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textOrarioR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/orarioR"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_ritorno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextPrimary"
                android:background="@color/colorPrimaryDark"
                android:popupBackground="@color/colorPrimaryDark"
                android:layout_gravity="end"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_check"
                style="@style/GenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logbutton"
                android:textColor="@color/colorTextPrimary"
                android:gravity="center"
                android:text="check"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="454dp" />

            <TextView
                android:id="@+id/text_count"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textSize="24dp"
                android:background="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="464dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPrenota"
            style="@style/GenButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/regbutton"
            android:text="Prenota"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="504dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>